implement LayerNorm class

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -30,7 +30,8 @@ add_library(${CMAKE_PROJECT_NAME} SHARED
         modules/tokenizer.cpp
         modules/TextEncoder.cpp
         modules/cnpy.cpp
-        modules/util.cpp)
+        modules/util.cpp
+        modules/nn/LayerNorm.cpp)
 
 # add libraries for OpenCL
 include_directories( ${CMAKE_SOURCE_DIR}/include )
