--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -32,7 +32,8 @@ add_library(${CMAKE_PROJECT_NAME} SHARED
         modules/cnpy.cpp
         modules/util.cpp
         modules/nn/LayerNorm.cpp
-        modules/nn/Linear.cpp)
+        modules/nn/Linear.cpp
+        modules/nn/ResidualAttentionBlock.cpp)
 
 # add libraries for OpenCL
 include_directories( ${CMAKE_SOURCE_DIR}/include )
