implement DDIM Sampler

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -34,7 +34,8 @@ add_library(${CMAKE_PROJECT_NAME} SHARED
         modules/nn/LayerNorm.cpp
         modules/nn/Linear.cpp
         modules/nn/ResidualAttentionBlock.cpp
-        modules/nn/MultiHeadAttention.cpp)
+        modules/nn/MultiHeadAttention.cpp
+        modules/DDIMSampler.cpp)
 
 # add libraries for OpenCL
 include_directories( ${CMAKE_SOURCE_DIR}/include )
