add SpatialTransformer & implement proj_in of Spatial & add epsilon in GroupNorm

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -39,7 +39,8 @@ add_library(${CMAKE_PROJECT_NAME} SHARED
         modules/UNetModel.cpp
         modules/nn/Conv2D.cpp
         modules/nn/GroupNorm.cpp
-        modules/nn/ResBlock.cpp)
+        modules/nn/ResBlock.cpp
+        modules/nn/SpatialTransformer.cpp)
 
 # add libraries for OpenCL
 include_directories( ${CMAKE_SOURCE_DIR}/include )
