--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -40,7 +40,8 @@ add_library(${CMAKE_PROJECT_NAME} SHARED
         modules/nn/Conv2D.cpp
         modules/nn/GroupNorm.cpp
         modules/nn/ResBlock.cpp
-        modules/nn/SpatialTransformer.cpp)
+        modules/nn/SpatialTransformer.cpp
+        modules/nn/BasicTransformerBlock.cpp)
 
 # add libraries for OpenCL
 include_directories( ${CMAKE_SOURCE_DIR}/include )
