add CrossAttention & Implement einsum of Cross & fix LayerNorm & support nullable bias in Linear

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -41,7 +41,8 @@ add_library(${CMAKE_PROJECT_NAME} SHARED
         modules/nn/GroupNorm.cpp
         modules/nn/ResBlock.cpp
         modules/nn/SpatialTransformer.cpp
-        modules/nn/BasicTransformerBlock.cpp)
+        modules/nn/BasicTransformerBlock.cpp
+        modules/nn/CrossAttention.cpp)
 
 # add libraries for OpenCL
 include_directories( ${CMAKE_SOURCE_DIR}/include )
