Reuse Kernel : reuse UtilKerenel - TextEncoder part

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -51,6 +51,7 @@ add_library(${CMAKE_PROJECT_NAME} SHARED
         modules/kernel/unit/LayerNormKernel.cpp
         modules/kernel/unit/LinearKernel.cpp
         modules/kernel/unit/MultiHeadAttentionKernel.cpp
+        modules/kernel/unit/UtilKernel.cpp
 )
 
 # add libraries for OpenCL
