Reuse Kernel : CrossAttentionKernel 추가

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -53,6 +53,7 @@ add_library(${CMAKE_PROJECT_NAME} SHARED
         modules/kernel/unit/MultiHeadAttentionKernel.cpp
         modules/kernel/unit/UtilKernel.cpp
         modules/kernel/unit/ConvKernel.cpp
+        modules/kernel/unit/CrossAttentionKernel.cpp
 )
 
 # add libraries for OpenCL
