Reuse Kernel : GEGLUKernel 추가

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -54,6 +54,7 @@ add_library(${CMAKE_PROJECT_NAME} SHARED
         modules/kernel/unit/UtilKernel.cpp
         modules/kernel/unit/ConvKernel.cpp
         modules/kernel/unit/CrossAttentionKernel.cpp
+        modules/kernel/unit/GEGLUKernel.cpp
 )
 
 # add libraries for OpenCL
