Reuse Kernel : GroupNormKernel 추가

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -55,6 +55,7 @@ add_library(${CMAKE_PROJECT_NAME} SHARED
         modules/kernel/unit/ConvKernel.cpp
         modules/kernel/unit/CrossAttentionKernel.cpp
         modules/kernel/unit/GEGLUKernel.cpp
+        modules/kernel/unit/GroupNormKernel.cpp
 )
 
 # add libraries for OpenCL
